--- a/demo/demos/groups.html
+++ b/demo/demos/groups.html
@@ -9,5 +9,5 @@
 </div>
 
 <script data-demo type="text/javascript">
-  $("form#groupsDemo").validationEngine();
+  $("form#groupsDemo").asyncValidator();
 </script>
