--- a/demo/demos/regular-expressions.html
+++ b/demo/demos/regular-expressions.html
@@ -6,7 +6,7 @@
 </div>
 
 <script data-demo type="text/javascript">
-  $("form#regexDemo").validationEngine();
+  $("form#regexDemo").asyncValidator();
 </script>
 
 
