--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row-fluid" id="basic">
           <h3>Basic Example</h3>
 
-          Given the following:
+          Given the following form:
 
           <pre class="prettyprint">
 &lt;form id='myForm'&gt;
