--- a/index.html
+++ b/index.html
@@ -9,26 +9,83 @@
 
    <div class="loading-cover" style="z-index: 2000;  position: fixed;  height: 100%;  width: 100%;  top: 0px; left: 0px;  z-index: 2000;  color: #1B1B1B;  text-align: center;  padding-top: 40px;  font-size: 40px;  background: url('http://framework.jpillora.com/img/loading64black.gif') no-repeat scroll 50% 100px white; font-family: Helvetica;">Loading...</div>
 
+   <!-- Notices
+            <div class="alert"><strong>!</strong></div>
+    -->
+
   <div class="container-fluid">
 
     <div class="row-fluid">
+
       <div class="span3">
         <div class="well sidebar-nav">
           <ul id="nav-list" class="nav nav-list">
           </ul>
-        </div><!--/.well -->
-      </div><!--/span-->
+        </div>
+      </div>
+
       <div class="span9">
 
         <div class="hero-unit">
           <h1>jQuery Async Validator</h1>
           <p>An jQuery plugin to provide easy to use asynchronous client side validations.</p>
           <p><a </a></p>
-          <p><a class="btn btn-primary btn-large" href="https://github.com/jpillora/jquery.async.validator">Github &raquo;</a></p>
+          <p><a class="btn btn-primary btn-large" href="https://github.com/jpillora/jquery.async.validator" target="_blank">Github &raquo;</a></p>
+        </div>
+
+
+        <div data-nav-heading="Introduction" class="row-fluid">
+          <h3>Features</h3>
+          <div class="demo" data-nav-anchor="Features">
+            <ul>
+              <li>Easily extendable</li>
+              <li>Fully customisable asynchronous validations</li>
+              <li>Grouped validations (validation dependance)</li>
+            </ul>
+          </div>
         </div>
 
         <div data-nav-heading="Basic Examples" class="row-fluid">
           <h3>Basic Examples</h3>
+
+
+          <div class="demo" data-nav-anchor="Include Scripts">
+
+            <h4>Include Async Validator</h4>
+            <h5>Download</h5>
+
+            With jQuery Prompt
+            <ul>
+              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.prompt.js">Development Version with jquery.prompt</a></li>
+              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.prompt.min.js">Production Version with jquery.prompt</a></li>
+              <li><a href="http://raw.github.com/jpillora/jquery.prompt/master/dist/jquery.prompt.css">Stylesheet for jquery.prompt</a></li>
+            </ul>
+
+            Without jQuery Prompt
+            <ul>
+              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.js">Development Version</a></li>
+              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.min.js">Production Version</a></li>
+            </ul>
+            <div class="alert"><strong>Note</strong> Without jQuery Prompt, you will need to implement the <code>prompt</code> method in order to see visible changes. Todo Docs.</div>
+
+            <h5>GitHub Link</h5>
+
+            <pre class="prettyprint">
+&lt;!-- jQuery --&gt;
+&lt;script src=&quot;//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js&quot;&gt;&lt;/script&gt;
+
+&lt;!-- jQuery Async Validator (with jQuery Prompt included) --&gt;
+&lt;script src=&quot;//raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.prompt.min.js&quot;&gt;&lt;/script&gt;
+&lt;!-- jQuery Prompt stylesheet --&gt;
+&lt;link href=&quot;//raw.github.com/jpillora/jquery.prompt/master/dist/jquery.prompt.css&quot; rel=&quot;stylesheet&quot; type=&quot;text/css&quot; &gt;
+</pre>
+
+            <div class="alert">
+              <strong>Beware!</strong> GitHub is not intended for use as a CDN and may not always be avaiable.
+            </div>
+
+          </div>
+
 
           <div class="demo" data-nav-anchor="Hello World">
             <h4>Hello Asyn Validator!</h4>
@@ -36,10 +93,10 @@
             Given the following form
 
             <pre class="prettyprint">
-&lt;form id='myForm'&gt;
-  &lt;input value='42'&gt;
-  &lt;input value='10/06/2012'&gt;
-  &lt;input class='submit' type='submit'/&gt;
+&lt;form id="myForm"&gt;
+  &lt;input value="42"&gt;
+  &lt;input value="xx"&gt;
+  &lt;input class="submit" type="submit"/&gt;
 &lt;/form&gt;
 </pre>
 
@@ -49,16 +106,15 @@
             Boom
             <div data-html>
               <form>
-                <input name="num1" value="42" data-validate="number">
-                <input name="num2" value="xx" data-validate="number">
-
+                <input value="42" data-validate="number">
+                <input value="xx" data-validate="number">
                 <input class="submit" type="submit"/>
               </form>
             </div>
 
-            <span class="note">
-              Note: The plugin will auto-initialise all forms that an input with a data-validate attribute.
-            </span>
+            <div class="alert alert-info">
+              <strong>Note</strong> jQuery Async Validator will auto-initialise all forms that contain an element with <code>data-validate</code> attribute. So in this case no script is required.
+            </div>
             
           </div>
 
@@ -80,15 +136,19 @@
                 <input class="submit" type="submit"/>
               </form>
             </div>
+
             <script data-script type="text/javascript">
               console.log(42);
             </script>
 
           </div>
 
-        </div><!-- basic -->
+        </div><!-- Basic -->
 
 
+        <div data-nav-heading="API" class="row-fluid">
+          <h3>API</h3>
+        </div><!-- API -->
       </div>
     </div>
 
