--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 
         <div class="hero-unit">
           <h1>jQuery Async Validator</h1>
-          <p>An jQuery plugin to provide easy to use asynchronous client side validations.</p>
-          <p><a </a></p>
-          <p><a class="btn btn-primary btn-large" href="https://github.com/jpillora/jquery.async.validator" target="_blank">Github &raquo;</a></p>
+          <p>A jQuery plugin to provide fully customisable asynchronous client-side validations.</p>
+          <p><a> </a></p>
+          <p><a class="btn btn-primary btn-large" href="https://github.com/jpillora/jquery.async.validator" target="_blank">Project on Github &raquo;</a></p>
         </div>
 
+        <div class="alert alert-error"><strong>hello!</strong></div>
 
         <div data-nav-heading="Introduction" class="row-fluid">
           <h3>Features</h3>
@@ -66,9 +67,10 @@
               <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.js">Development Version</a></li>
               <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.min.js">Production Version</a></li>
             </ul>
+
             <div class="alert"><strong>Note</strong> Without jQuery Prompt, you will need to implement the <code>prompt</code> method in order to see visible changes. Todo Docs.</div>
 
-            <h5>GitHub Link</h5>
+            <h5>GitHub Hosted</h5>
 
             <pre class="prettyprint">
 &lt;!-- jQuery --&gt;
