--- a/index.html
+++ b/index.html
@@ -36,23 +36,19 @@
         <div class="alert alert-error"><strong>hello!</strong></div>
 
         <div data-nav-heading="Introduction" class="row-fluid">
-          <h3>Features</h3>
+          <h3>Introduction</h3>
+
           <div class="demo" data-nav-anchor="Features">
+            <h4>Features</h4>
             <ul>
               <li>Easily extendable</li>
               <li>Fully customisable asynchronous validations</li>
               <li>Grouped validations (validation dependance)</li>
             </ul>
           </div>
-        </div>
 
-        <div data-nav-heading="Basic Examples" class="row-fluid">
-          <h3>Basic Examples</h3>
-
-
-          <div class="demo" data-nav-anchor="Include Scripts">
-
-            <h4>Include Async Validator</h4>
+          <div class="demo" data-nav-anchor="Include">
+            <h4>Include</h4>
             <h5>Download</h5>
 
             With jQuery Prompt
@@ -87,6 +83,12 @@
             </div>
 
           </div>
+
+        </div>
+
+        <div data-nav-heading="Basic Examples" class="row-fluid">
+          <h3>Basic Examples</h3>
+
 
 
           <div class="demo" data-nav-anchor="Hello World">
