--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <div class="loading-cover" style="z-index: 2000;  position: fixed;  height: 100%;  width: 100%;  top: 0px; left: 0px;  z-index: 2000;  color: #1B1B1B;  text-align: center;  padding-top: 40px;  font-size: 40px;  background: url('http://framework.jpillora.com/img/loading64black.gif') no-repeat scroll 50% 100px white; font-family: Helvetica;">Loading...</div>
 
    <!-- Notices
-            <div class="alert"><strong>!</strong></div>
+    <div class="alert"><strong>!</strong></div>
     -->
 
   <div class="container-fluid">
@@ -32,9 +32,9 @@
           <p><a> </a></p>
           <p><a class="btn btn-primary btn-large" href="https://github.com/jpillora/jquery.async.validator" target="_blank">Project on Github &raquo;</a></p>
         </div>
-
+        <!-- 
         <div class="alert alert-error"><strong>hello!</strong></div>
-
+        -->
         <div data-nav-heading="Introduction" class="row-fluid">
           <h3>Introduction</h3>
 
@@ -53,15 +53,14 @@
 
             With jQuery Prompt
             <ul>
-              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.prompt.js">Development Version with jquery.prompt</a></li>
-              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.prompt.min.js">Production Version with jquery.prompt</a></li>
-              <li><a href="http://raw.github.com/jpillora/jquery.prompt/master/dist/jquery.prompt.css">Stylesheet for jquery.prompt</a></li>
+              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/gh-pages/dist/jquery.async.validator.prompt.js">Development Version with jquery.prompt</a></li>
+              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/gh-pages/dist/jquery.async.validator.prompt.min.js">Production Version with jquery.prompt</a></li>
             </ul>
 
             Without jQuery Prompt
             <ul>
-              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.js">Development Version</a></li>
-              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.min.js">Production Version</a></li>
+              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/gh-pages/dist/jquery.async.validator.js">Development Version</a></li>
+              <li><a href="http://raw.github.com/jpillora/jquery.async.validator/gh-pages/dist/jquery.async.validator.min.js">Production Version</a></li>
             </ul>
 
             <div class="alert"><strong>Note</strong> Without jQuery Prompt, you will need to implement the <code>prompt</code> method in order to see visible changes. Todo Docs.</div>
@@ -73,9 +72,9 @@
 &lt;script src=&quot;//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js&quot;&gt;&lt;/script&gt;
 
 &lt;!-- jQuery Async Validator (with jQuery Prompt included) --&gt;
-&lt;script src=&quot;//raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.prompt.min.js&quot;&gt;&lt;/script&gt;
+&lt;script src=&quot;//raw.github.com/jpillora/jquery.async.validator/gh-pages/dist/jquery.async.validator.prompt.min.js&quot;&gt;&lt;/script&gt;
 &lt;!-- jQuery Prompt stylesheet --&gt;
-&lt;link href=&quot;//raw.github.com/jpillora/jquery.prompt/master/dist/jquery.prompt.css&quot; rel=&quot;stylesheet&quot; type=&quot;text/css&quot; &gt;
+&lt;link href=&quot;//raw.github.com/jpillora/jquery.prompt/gh-pages/dist/jquery.prompt.css&quot; rel=&quot;stylesheet&quot; type=&quot;text/css&quot; &gt;
 </pre>
 
             <div class="alert">
@@ -152,6 +151,9 @@
 
         <div data-nav-heading="API" class="row-fluid">
           <h3>API</h3>
+
+          <div class="alert"><strong>Note</strong> Documentation In Progress !</div>
+
         </div><!-- API -->
       </div>
     </div>
