--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body id="app">
   <div class="loading-cover" style="z-index: 2000;  position: fixed;  height: 100%;  width: 100%;  top: 0px; left: 0px;  z-index: 2000;  color: #1B1B1B;  text-align: center;  padding-top: 40px;  font-size: 40px;  background: url('http://framework.jpillora.com/img/loading64black.gif') no-repeat scroll 50% 100px white; font-family: Helvetica;">Loading...</div>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+  <script src="demo/lib/jquery.min.js"></script>
   <script src="dist/jquery.async.validator.prompt.js"></script>
    <!-- Notices
     <div class="alert"><strong>!</strong></div>
@@ -20,8 +20,7 @@
 
       <div class="span3">
         <div class="well sidebar-nav">
-          <ul id="nav-list" class="nav nav-list">
-          </ul>
+          <ul id="nav-list" class="nav nav-list"/>
         </div>
       </div>
 
@@ -37,10 +36,8 @@
         <div class="alert alert-error"><strong>hello!</strong></div>
         -->
         <div data-nav-heading="Introduction" class="row-fluid">
-          <h3>Introduction</h3>
 
-          <div class="demo" data-nav-anchor="Features">
-            <h4>Features</h4>
+          <div data-nav-anchor="Features">
             <ul>
               <li>Easily extendable</li>
               <li>Configurable validators using</li>
@@ -49,8 +46,8 @@
             </ul>
           </div>
 
-          <div class="demo" data-nav-anchor="Usage">
-            <h4>Usage</h4>
+          <div data-nav-anchor="Usage">
+
             <h5>Download</h5>
 
             With jQuery Prompt
@@ -65,7 +62,7 @@
               <li><a href="http://jpillora.github.com/jquery.async.validator/dist/jquery.async.validator.min.js">Production Version</a></li>
             </ul>
 
-            <div class="alert"><strong>Note</strong> Without jQuery Prompt, you will need to implement a <a href="#option-prompt">prompt handler option</a> in order to see visible changes.</div>
+            <div class="alert"><strong>Note</strong> Without jQuery Prompt, you will need to implement a <a data-link>prompt handler option</a> in order to see visible changes.</div>
 
             <h5>GitHub Hosted</h5>
 
@@ -85,8 +82,7 @@
 
         </div>
 
-        <div data-nav-heading="Basic Examples" class="row-fluid">
-          <h3>Basic Examples</h3>
+        <div data-nav-heading="Basic Validations" class="row-fluid">
 
           <div class="demo" data-nav-anchor="Hello World">
 
@@ -129,29 +125,38 @@
               </form>
             </div>
             <div class="alert alert-info">
-              <strong>Note</strong> You can use any combination of validation rules. Each field will execute it's validation rules in sequence. See <a href="#execution-sequence">Execution Sequence</a> for more information. 
+              <strong>Note</strong> You can use any combination of validation rules. Each field will execute it's validation rules in sequence. See <a data-link>Execution Sequence</a> for more information. 
             </div>
           </div>
 
           <div class="demo" data-nav-anchor="List of Included Rules">
-            <table class="table">
+            <table class="rules-table table table-striped table-bordered">
               <thead>
-                <tr><th>Name</th><th>Description</th></tr>
+                <tr><th>Name</th><th>Parameters</th><th>Description</th></tr>
               </thead>
               <tbody>
-                <tr><td>required</td><td>The value of the element cannot be blank</td></tr>
+                <tr><td>currency</td><td>None</td><td>Ensures a monetary value has been entered</td></tr>
+                <tr><td>required</td><td>None</td><td>The value of the element cannot be blank</td></tr>
               </tbody>
             </table>
           </div>
 
+        </div><!-- Basic -->
+
+
+        <div data-nav-heading="Custom Validations" class="row-fluid">
+
           <div class="demo" data-nav-anchor="Custom Rules">
-            If the validation rule you're looking for isn't in the list above, it's easy to create your own custom rule.
+            <p>
+              If the validation rule you're looking for isn't in the list above, it's easy to create your own custom rule.
+            </p>
+            <p>
+              For example, if for some strange reason, we wanted to check if a field is divible by 3, we can add a new rule <code>divisibleByThree</code>.
+            </p>
 
-
-            Add a new rule:
             <pre data-script></pre>
 
-            Now you can use <code>divisibleByThree</code>:
+            Now, we can use it
             <pre data-html></pre>
 
             <script data-script type="text/javascript">
@@ -174,25 +179,66 @@
                 <input class="submit" type="submit"/>
               </form>
             </div>
-            <div class="alert"><strong>Note</strong> See the <a href="#rule-object-spec">Rule Object Spec</a> for more information.</div>
+            <div class="alert"><strong>Note</strong> See the <a data-link>Rule Object Spec</a> for more information.</div>
           </div>
 
-        </div><!-- Basic -->
-
+        </div><!-- Custom -->
 
         <div data-nav-heading="API" class="row-fluid">
-          <h3>API</h3>
 
           <div class="alert"><strong>Note</strong> Documentation In Progress !</div>
 
         </div><!-- API -->
 
         <div data-nav-heading="Options" class="row-fluid">
-          <h3>Options</h3>
 
-          <div class="alert"><strong>Note</strong> Documentation In Progress !</div>
+          <div data-nav-anchor="List of Options" class="demo">          
+            <table class="table table-striped table-bordered api-table">
+              <thead>
+                <tr><th>Name</th><th>Description</th><th>Default</th></tr>
+              </thead>
+              <tbody>
+                <tr><td>debug</td><td>Display log messages flag</td><td>false</td></tr>
+
+                <tr><td>validateAttribute</td><td>Attribute to use for listing validation rules</td><td>"data-validate"</td></tr>
+
+                <tr><td>validationEventTrigger</td><td>Event which will trigger validation</td><td>"blur"</td></tr>
+
+                <tr><td>scroll</td><td>Automatically scroll viewport to the first error</td><td>true</td></tr>
+
+                <tr><td>focusFirstField</td><td>Automatically focus into to the first field with an error</td><td>true</td></tr>
+
+                <tr><td>hideErrorOnChange</td><td>Hide error while the user is editing the field</td><td>false</td></tr>
+
+                <tr><td>skipHiddenFields</td><td>Whether to skip the hidden fields with validators</td><td>true</td></tr>
+
+                <tr><td>errorContainer</td><td>A function which returns the element in which to add or remove the "errorClass"</td><td>function(input) { return input; }</td></tr>
+
+                <tr><td>errorClass</td><td>The class name to be toggled on the "errorContainer"</td><td>"error"</td></tr>
+
+                <tr><td>onValidationComplete</td><td>Post-validation/Pre-form-submit hook. If you return <code>true</code>, form will submit. </td><td>function(form, result) { return result; }</td></tr>
+
+                <tr><td>track</td><td>Method used for tracking user validation interactions. Read more here <a data-link>Validation Event Tracking</a></td><td>$.noop</td></tr>
+
+                <tr><td>prompt</td><td>Method used to display validation errors. Read more here <a data-link>Prompt Handler</a></td><td>function(element, text, opts) { $.prompt(element, text, opts); }</td></tr>
+
+              </tbody>
+            </table>
+          </div>
+
+          <div data-nav-anchor="Overriding Options" class="demo">
+            <div class="alert"><strong>Note</strong> Documentation In Progress !</div>
+          </div>
 
         </div><!-- Options -->
+
+
+        <!-- 
+        <div data-nav-heading="Test Heading" class="row-fluid">
+          <div data-nav-anchor="Test Anchor" class="demo">
+          </div>
+        </div>
+        -->
 
       </div>
     </div>
