working! rewriting tests..

--- a/test/runner.html
+++ b/test/runner.html
@@ -4,6 +4,7 @@
     <title>Mocha - jQuery Validation Engine Tests</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="lib/mocha.css" />
+    <script type="text/javascript" src="lib/underscore.js"></script>
     <script type="text/javascript" src="lib/jquery.js"></script>
     <script type="text/javascript" src="lib/mocha.js"></script>
     <script type="text/javascript" src="lib/chai.js"></script>
