--- a/demo/demos/labs.html
+++ b/demo/demos/labs.html
@@ -14,17 +14,37 @@
 
 <script type="text/javascript">
   
-  $.asyncValidator({ debug: true });
+  $.asyncValidator({
+    // debug: true,
+    skipNotRequired: false,
+    onValidationComplete: function(e, result) {
+      console.log("VALIDATION COMPLETE: " + result)
+      return false;
+    }
+  });
+
+  var pass = function(r) { return true; },
+      fail = function(n) { return function(r) { return "'"+n+"' failed."; }; };
 
   $.asyncValidator.addRules({
-    a: function(r) { return true; },
-    b: function(r) { return true; },
-    c: function(r) { return "It failed."; },
-    d: function(r) { return true; }
+    a: pass,
+    b: pass,
+    c: pass,
+    d: pass,
+    e: pass,
+    f: pass
   });
   $.asyncValidator.addGroupRules({
     g: function(r) {
-      return true;  
+
+      console.log("RUN G")
+      console.log( r.groupElems() );
+      console.log( r.groupElem("b")[0] );
+      console.log( r.val("b") );
+
+      r.errorFields = {c: "c fail!", a: "a !", d: "D!"}
+
+      return r == ;
     }
   });
 
@@ -34,13 +54,12 @@
       console.log(this);
     });
 
-
-    var selector = "#1"
-    setTimeout(function() {
-      $(selector).validate(function(result) {
-        console.log("DONE", result);
-      });
-    }, 1000);
+    // var selector = "form"// "#F1"
+    // setTimeout(function() {
+    //   $(selector).validate(function(result) {
+    //     console.log("DONE", result);
+    //   });
+    // }, 1000);
 
   });
 
@@ -48,9 +67,16 @@
 </script>
 
 <form>
-  <input id="1" value="42" data-validate="a,b,g,d"/>
-  <input id="2" value="abc" data-validate="g"/>
-  <input id="3" value="abc" data-validate="b,g,c,d"/>
-  <input id="4" value="" data-validate="d"/>
+  <span >hello afdfas dfsda fasdf asdf adsfa sf</span>
+
+  <input id="F1" value="42" data-validate="a,b,g#a,d"/>
+  <input id="F2" value="abc" data-validate="g#b"/>
+  <input id="F3" value="def" data-validate="e,g#c,c,f"/>
+  <input id="F4" value="" data-validate="d"/>
+  <input id="F4" value="" data-validate=""/>
   <input type="submit"/>
 </form>
+
+
+
+
