--- a/demo/demos/groups.html
+++ b/demo/demos/groups.html
@@ -1,13 +1,38 @@
 <div data-demo>
-  <form id="groupsDemo">
-    <fieldset data-validate="required">
-      <input name="f1" value="abc">
-      <input name="f2" value="def">
-    </fieldset>
+  <form>
+    <input name="f1" value="abc" data-validate="testGroup#1">
+    <input name="f2" value="def" data-validate="testGroup#2">
+    <input name="f3" value="xyz">
     <input class="submit" type="submit"/>
   </form>
 </div>
 
+
+<!-- jQuery -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<!-- Local Test -->
+<script src="../../dist/jquery.async.validator.prompt.js"></script>
+
 <script data-demo type="text/javascript">
-  $("form#groupsDemo").asyncValidator();
+
+$.asyncValidator({
+  debug:true,
+  beforeSubmit: function() { return false; }
+});
+
+$.asyncValidator.addGroupRules({
+  testGroup: function(r) {
+
+    r._exec.warn("r!")
+
+    if (r.val("1") !== "abc") {
+      return "1 should be abc";
+    }
+    if (r.groupElem("2").val() !== "def") {
+      return "2 should be def";
+    }
+    return true;
+  }
+});
+
 </script>
