--- a/demo/demos/groups2.html
+++ b/demo/demos/groups2.html
@@ -1,25 +1,23 @@
 
-
 <!-- jQuery -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-
-<!-- jQuery Async Validator (with jQuery Prompt included) -->
-
-<!-- 
-<script src="//raw.github.com/jpillora/jquery.async.validator/master/dist/jquery.async.validator.prompt.min.js"></script>
- -->
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
 <!-- Local Test -->
 <script src="../../dist/jquery.async.validator.prompt.js"></script>
 
 <script type="text/javascript">
   
   $.asyncValidator({
-    // debug: true,
+    debug: true,
     skipNotRequired: false,
     onValidationComplete: function(e, result) {
       console.log("VALIDATION COMPLETE: " + result)
       return false;
+    },
+    // prompt: function() {
+    //   console.warn("PROMPT", arguments[0].attr('id'), arguments[1]);
+    // },
+    track: function() {
+      console.log("TRACK", arguments);
     }
   });
 
@@ -34,25 +32,26 @@
     e: pass,
     f: pass
   });
+
   $.asyncValidator.addGroupRules({
     g: function(r) {
 
-      console.log("RUN G")
-      console.log( r.groupElems() );
-      console.log( r.groupElem("b")[0] );
-      console.log( r.val("b") );
+      console.log("G!")
 
-      r.errorFields = {c: "c fail!", a: "a !", d: "D!"}
+      var s = "";    
 
-      return r == ;
+      r.groupElems().each(function() {
+        s += $(this).val();
+      });
+
+      if(s !== "abc")
+        return "Not ABC! >> " + s;
+
+      return true;
     }
   });
 
   $(function() {
-
-    $(document).on("validating", "*", function() {
-      console.log(this);
-    });
 
     // var selector = "form"// "#F1"
     // setTimeout(function() {
@@ -73,7 +72,7 @@
   <input id="F2" value="abc" data-validate="g#b"/>
   <input id="F3" value="def" data-validate="e,g#c,c,f"/>
   <input id="F4" value="" data-validate="d"/>
-  <input id="F4" value="" data-validate=""/>
+  <input id="F5" value="" data-validate="f"/>
   <input type="submit"/>
 </form>
 
